tests/snapshots/run_wpt_conformance__litert_resample2d_upsample__float32_4D_tensor_options_sizes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
resample2d.https.any.js resample2d(upsample) float32 4D tensor options.sizes, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    resample2dInput: f32[1, 1, 2, 3];
  }

  nodes {
    [resample2dOutput] = resample2d(resample2dInput, axes=[], label="", mode="", scales=[], sizes=[4, 6]);
  }

  outputs { resample2dOutput; }
}
